# sashay

./: Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/api/: main.py
backend/app/api/routers/: v1.py
backend/app/controllers/: games.py  rooms.py
backend/app/models/api/: initialize.py
backend/app/models/api/games/: get_game_state.py  get_pieces.py  initialize.py  move_piece.py  toggle_marking.py
backend/app/models/api/rooms/: create.py  get_player_number.py  join.py
backend/app/models/game/: base.py  board.py  engine.py  piece.py
backend/app/services/: database.py  games.py  rooms.py
backend/app/utils/: errors.py  game.py
frontend/: .env.example  eslint.config.mjs  package-lock.json  package.json
frontend/src/actions/: messages.ts
frontend/src/actions/game/: get-game-state.ts  get-pieces.ts  initialize-capture.ts  initialize.ts  move-piece.ts  toggle-marking.ts
frontend/src/actions/room/: create.tsx  get-player-number.ts  join.tsx
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(home)/: page.tsx
frontend/src/app/game/: page.tsx
frontend/src/components/game/: board.tsx  piece-tally.tsx  side-bar.tsx  square.tsx
frontend/src/components/home/: create-room-button.tsx  join-room-group.tsx
frontend/src/components/icons/: lucide-hand-fist.tsx  lucide-lab-high-heel.tsx  lucide-venetian-mask.tsx
frontend/src/components/ui/: badge.tsx  (+1 more)
frontend/src/lib/: constants.ts  supabase.ts  utils.ts
frontend/src/state/: game.ts
frontend/src/types/: game.tsx  room.tsx
(+8 files in other folders)
